--- a/src/app/committees/events/events.component.html
+++ b/src/app/committees/events/events.component.html
@@ -1,1 +1,20 @@
-<p>events works!</p>
+<div class="sidebar-container">
+    <div class="not-sidebar">
+        <div class="section-header">Events Committee</div>
+        <div class="paragraph-header">Leader: Theresa Cutright</div>
+        <p-divider></p-divider>
+        <div class="paragraph-copy">
+            The Events Committee is tasked with planning and implementing community events such as holiday parties and other social gatherings.
+        </div>
+        <p-divider></p-divider>
+        <div class="paragraph-header">Volunteer</div>
+        <div class="paragraph-copy">
+            The Events Committee ....  Log in and check the Forum to volunteer or get more information.
+        </div>
+        <p-divider></p-divider>
+        
+    </div>
+    <div class="sidebar200">
+        <img  class="images" src="assets\images\IMG_3999.jpg"/>
+    </div>
+</div>
