--- a/src/app/committees/hospitality/hospitality.component.html
+++ b/src/app/committees/hospitality/hospitality.component.html
@@ -1,1 +1,20 @@
-<p>hospitality works!</p>
+<div class="sidebar-container">
+    <div class="not-sidebar">
+        <div class="section-header">Hospitality Committee</div>
+        <div class="paragraph-header">Leader: Theresa Cutright</div>
+        <p-divider></p-divider>
+        <div class="paragraph-copy">
+            The Hospitality Committee is tasked with welcoming new residents to the community and...
+        </div>
+        <p-divider></p-divider>
+        <div class="paragraph-header">Volunteer</div>
+        <div class="paragraph-copy">
+            The Hospitality Committee .... Log in and check the Forum to volunteer or get more information.
+        </div>
+        <p-divider></p-divider>
+        
+    </div>
+    <div class="sidebar200">
+        <img  class="images" src="assets\images\IMG_3999.jpg"/>
+    </div>
+</div>
