--- a/src/app/committees/landscape/landscape.component.html
+++ b/src/app/committees/landscape/landscape.component.html
@@ -1,1 +1,33 @@
-<p>landscape works!</p>
+<div class="sidebar-container">
+    <div class="not-sidebar">
+        <div class="section-header">Landscape Committee</div>
+        <div class="paragraph-header">Leader: Seth Rodecker</div>
+        <p-divider></p-divider>
+        <div class="paragraph-copy">
+            The Landscape Committee is tasked with planning and implementing 
+        </div>
+        <p-divider></p-divider>
+        <div class="paragraph-header">Volunteer</div>
+        <div class="paragraph-copy">
+            The Landscape Committee is a great place to meet new friends and come together for a common cause.  
+            Currently the committee is meeting about once a week on WEEKEND MORNINGS...  Log in and check the Forum to volunteer or get more information.
+        </div>
+        <p-divider></p-divider>
+        
+    </div>
+    <div class="sidebar200">
+        <img  class="images" src="assets\images\IMG_4009.jpg"/>
+    </div>
+</div>
+<p-divider></p-divider>
+<div class="gallery">
+    <img  class="images" src="assets\images\IMG_4010.jpg"/>
+    <img  class="images" src="assets\images\IMG_3963.jpg"/>
+    <img  class="images" src="assets\images\IMG_3987.jpg"/>
+    <img  class="images" src="assets\images\IMG_4013.jpg"/>
+    <img  class="images" src="assets\images\IMG_4001.jpg"/>
+    <img  class="images" src="assets\images\IMG_3982.jpg"/>
+    <img  class="images" src="assets\images\IMG_3961.jpg"/>
+    <img  class="images" src="assets\images\IMG_4008.jpg"/>
+    <img  class="images" src="assets\images\IMG_3968.jpg"/>
+</div>
