--- a/src/app/committees/rules/rules.component.html
+++ b/src/app/committees/rules/rules.component.html
@@ -1,1 +1,20 @@
-<p>rules works!</p>
+<div class="sidebar-container">
+    <div class="not-sidebar">
+        <div class="section-header">Rules and Regulations Committee</div>
+        <div class="paragraph-header">Leader: ?</div>
+        <p-divider></p-divider>
+        <div class="paragraph-copy">
+            The Rules and Regulations Committee is a temporary committee established specifically to update WST Rules and Regulations.
+        </div>
+        <p-divider></p-divider>
+        <div class="paragraph-header">Participate</div>
+        <div class="paragraph-copy">
+            Log in and check the Forum to get the latest on the R&R update and voice your opinion.
+        </div>
+        <p-divider></p-divider>
+        
+    </div>
+    <div class="sidebar200">
+        <img  class="images" src="assets\images\IMG_4009.jpg"/>
+    </div>
+</div>
