--- a/src/app/committees/bylaws/bylaws.component.html
+++ b/src/app/committees/bylaws/bylaws.component.html
@@ -1,1 +1,20 @@
-<p>bylaws works!</p>
+<div class="sidebar-container">
+    <div class="not-sidebar">
+        <div class="section-header">By-Laws Committee</div>
+        <div class="paragraph-header">Leader: Rob Brewer</div>
+        <p-divider></p-divider>
+        <div class="paragraph-copy">
+            The By-Laws Committee is a temporary committee established specifically to update WST HOA By-Laws.
+        </div>
+        <p-divider></p-divider>
+        <div class="paragraph-header">Participate</div>
+        <div class="paragraph-copy">
+            Log in and check the Forum to get the latest on the By-Laws update and voice your opinion.
+        </div>
+        <p-divider></p-divider>
+        
+    </div>
+    <div class="sidebar200">
+        <img  class="images" src="assets\images\IMG_4009.jpg"/>
+    </div>
+</div>
