--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="sidebar-container">
+  <div class="not-sidebar">
+    <p-tabView>
+      <p-tabPanel header="Welcome">
+        <app-panel-top></app-panel-top>
+      </p-tabPanel>
+      <p-tabPanel header="News">
+        <app-panel-middle></app-panel-middle>
+      </p-tabPanel>
+      <p-tabPanel header="By-Laws">
+        <app-panel-bottom></app-panel-bottom>
+      </p-tabPanel>
+    </p-tabView>
+  </div>
+  <div class="sidebar">
+    <app-panel-side></app-panel-side>
+  </div>
+</div>
