--- a/src/app/hoa/issues/issues.component.html
+++ b/src/app/hoa/issues/issues.component.html
@@ -1,1 +1,18 @@
-<p>issues works!</p>
+<div class="section-header">Current Affairs</div>
+<p-divider></p-divider>
+<div class="paragraph-header">Property Liens</div>
+<div class="paragraph-copy">
+  There are currently X owners overdue.. details???
+</div>
+
+<p-divider></p-divider>
+<div class="paragraph-header">Roofs Replacement</div>
+<div class="paragraph-copy">
+  There are currently 2/3.... details???
+</div>
+
+<p-divider></p-divider>
+<div class="paragraph-header">Removal of Director</div>
+<div class="paragraph-copy">
+  In a move typical of the, 
+</div>
