--- a/src/app/hoa/members/members.component.html
+++ b/src/app/hoa/members/members.component.html
@@ -1,1 +1,30 @@
-<p>members works!</p>
+<div class="section-header">Members of the Board of Directors 2023</div>
+<p-divider></p-divider>
+<div class="paragraph-header">President</div>
+<div class="paragraph-copy">
+  Tova Galnur
+</div>
+
+<p-divider></p-divider>
+<div class="paragraph-header">Vice-President</div>
+<div class="paragraph-copy">
+  Iris Cohen
+</div>
+
+<p-divider></p-divider>
+<div class="paragraph-header">Treasurer</div>
+<div class="paragraph-copy">
+  Larry Cutright
+</div>
+
+<p-divider></p-divider>
+<div class="paragraph-header">Secretary</div>
+<div class="paragraph-copy">
+ Vacant
+</div>
+
+<p-divider></p-divider>
+<div class="paragraph-header">At-Large</div>
+<div class="paragraph-copy">
+  Vacant
+</div>
