--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
       <p-tabPanel header="Welcome">
         <app-panel-top></app-panel-top>
       </p-tabPanel>
-      <p-tabPanel header="News">
+      <p-tabPanel header="Mission">
         <app-panel-middle></app-panel-middle>
       </p-tabPanel>
       <p-tabPanel header="By-Laws">
