--- a/src/app/home/panel-middle/panel-middle.component.html
+++ b/src/app/home/panel-middle/panel-middle.component.html
@@ -1,12 +1,12 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="paragraph-header">Parking</div>
+    <div class="paragraph-header">Mission Statement</div>
     <div class="paragraph-copy">
-      Parking on Chimney rock has been extended to 2:00AM.
+      The primary mission of WSTAG is to represent and inform the the Members of the Association 
     </div>
     <p-divider></p-divider>
   </div>
   <div class="sidebar200">
-    <img class="images" src="assets\images\IMG_3975.jpg" />
+    <img class="images" src="assets\images\IMG_4013.jpg" />
   </div>
 </div>
