--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -1,23 +1,18 @@
 <div class="sidebar-container">
-    <div class="not-sidebar">
-        <div class="paragraph-header">Introduction</div>
-        <div class="paragraph-copy">
-            The Westbury Square Townhomes Advocacy Group exists to provide homeowners with current, complete and accurate concerning the management, finances and leadership of the HOA.
-            The WST HOA Board of Directors works for, and should be held accountable to the members of the Association (the homeowners).  
-            The Westbury Square Townhomes Advocacy Group is dedicated to providing WST homeowners with up-to-date and accurate information concerning the HOA Board of Directorsand other happening, events, and 
-        </div>
-        <p-divider></p-divider>
-        <div class="paragraph-header">Priorities</div>
-        <div class="paragraph-copy">
-            The ByLaws for WST were written in 1979 by the building contractor, and grant almost dictatorial powers to the President of the HOA. These bylaws were never 
-            intended to be permanent, and should have been updated in the early 1980's. 
-            As it stands now, there are loop holes and policies that allow for the dishonest and corrupt collection of proxies that keep corrupt boards in power.
-            Please see the ByLaws section under Committees for more information.
-        </div>
-        <p-divider></p-divider>
-        
+  <div class="not-sidebar">
+    <div class="paragraph-header">Introduction</div>
+    <div class="paragraph-copy">
+      The Westbury Square Townhomes Advocacy Group exists to provide homeowners
+      with current, complete and accurate concerning the management, finances
+      and leadership of the HOA. The WST HOA Board of Directors works for, and
+      should be held accountable to the members of the Association (the
+      "Members"). The Westbury Square Townhomes Advocacy Group is dedicated to
+      providing WST homeowners with up-to-date and accurate information
+      concerning the HOA Board of Directors and other happening, events, and
     </div>
-    <div class="sidebar200">
-        <img  class="images" src="assets\images\IMG_4009.jpg"/>
-    </div>
+   
+  </div>
+  <div class="sidebar200">
+    <img class="images" src="assets\images\IMG_4009.jpg" />
+  </div>
 </div>
