--- a/src/app/home/panel-bottom/panel-bottom.component.html
+++ b/src/app/home/panel-bottom/panel-bottom.component.html
@@ -1,22 +1,28 @@
 <div class="sidebar-container">
-    <div class="not-sidebar">
-      <div class="paragraph-header">By-Laws Update</div>
-      <p-divider></p-divider>
-      <div class="paragraph-copy">
-        Below is the opening paragraph to the current WST By-laws.  As is obvious, they were written by and for the original developer, not the homeowners.  
-        They are therefore heavily skewed toward a powerful president rather than a limited and accountable one.<br>
-        It is a the top priority of WSTAG to update the WST by-laws so homeowners have a greater say in how their investment is managed.<br>
-        To participate in the process, sign in to your account and go to the Forum.
-      </div>
-      <p-divider></p-divider>
-      <div class="paragraph-copy">
-        WHEREAS, ZAR PROPERTIES, LTD., a California limited partnership authorized to do business in the State of Texas, is the sole owner of the real property hereinafter described, and is improving and developing said property by converting to a condominium project thereon, consisting of 14 one (1) and two (2) story buildings, containing a total of one hundred ninety-five (195) individual condominium units, together with certain other facilities and structures as appurtenances thereto, which condominium project is known as WESTBURY SQUARE TOWNHOMES. 
-WHEREAS, ZAR PROPERTIES, LTD. desires to establish the By—laws pertaining to the operation of said project; 
-NOW, THEREFORE, ZAR PROPERTIES, LTD. does hereby establish the following By-laws governing the said WESTBURY SQUARE TOWNHOMES. 
-      </div>
-      <p-divider></p-divider>
+  <div class="not-sidebar">
+    <div class="paragraph-header">By-Laws Update</div>
+    <div class="paragraph-copy">
+      The ByLaws for WST were written in 1979 by the building contractor, and
+      grant almost dictatorial powers to the President of the HOA. These bylaws
+      were never intended to be permanent, and should have been updated in the
+      early 1980's. As it stands now, there are loop holes and policies that
+      allow for the dishonest and corrupt collection of proxies that keep
+      corrupt boards in power. Please see the ByLaws section under Committees
+      for more information.
     </div>
-    <div class="sidebar200">
-      <img class="images" src="assets\images\IMG_3975.jpg" />
+
+    <div class="paragraph-copy">
+      Below is the opening paragraph to the current WST By-laws. As is obvious,
+      they were written by and for the original developer, not the homeowners.
+      They are therefore heavily skewed toward a powerful president rather than
+      a limited and accountable one.<br />
+      It is a the top priority of WSTAG to update the WST by-laws so homeowners
+      have a greater say in how their investment is managed.<br />
+      To participate in the process, sign in to your account and go to the
+      Forum.
     </div>
   </div>
+  <div class="sidebar200">
+    <img class="images" src="assets\images\IMG_4003.jpg" />
+  </div>
+</div>
