--- a/src/app/topbar-menu/topbar-menu.component.scss
+++ b/src/app/topbar-menu/topbar-menu.component.scss
@@ -1,17 +1,48 @@
 .router-outlet {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    width: 100%;
-    padding: 10px 0;
-  }
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  padding: 10px 0;
+}
 
-  .app-container{
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    width: 100%;
-    min-width: 360px;
-    max-width: 1000px;
-    padding: 10px 0;
+.app-container {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  min-width: 360px;
+  max-width: 1000px;
+  padding: 10px 0;
+}
+
+.red-divider {
+  border-top: 2px solid #f84444;
+  border-bottom: 2px solid #f84444;
+  width: 100%;
+  font-size: small;
+  text-align: center;
+}
+
+.header-img {
+  background-position: center center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: aqua;
+  border: 0;
+  width:auto;
+  height:auto;
+}
+
+@media (min-width: 300px) {
+  .header-img {
+    background-image: url('../../assets/images/WST-AG-mobile.png');
   }
+}
+
+@media (min-width: 900px) {
+  .header-img {
+    background-image: url('../../assets/images/WST-AG.png');
+  }
+}
