--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,20 @@ body {
     display: block;
     font-size: 1.3em;
     font-weight: bold;
-    color: #084A42;
+    color: #00776B;
+}
+
+.page-content{
+    margin:0 15px 0 15px;
+}
+
+.form-group{
+    width:200px;
+    display:flex;
+    flex-direction: column;
+    input{
+        margin-bottom: 10px;
+    }
 }
 .paragraph-header {
     display: block;
@@ -61,6 +74,16 @@ body {
     font-weight: bold;
 }
 
+.black12{
+    font-size: 12px;
+    color:#000;
+}
+
+.p-button-link {
+    font-size: 12px;
+    padding-left:0;
+}
+
 .gallery{
     display:flex;
     flex-wrap: wrap;
@@ -68,7 +91,7 @@ body {
     justify-content: space-between;
 }
 
-.img-border{
+img{
     border: 2px solid #000;
 }
 
