--- a/src/app/topbar-menu/topbar-menu.component.html
+++ b/src/app/topbar-menu/topbar-menu.component.html
@@ -6,7 +6,7 @@
       </picture>
    
     <div class="red-divider">
-        This is a private website by and for WST Owners and is not affiliated with the official WST HOA.
+        This is a private website by and for WST Owners and is not affiliated with the official WST HOA. Version .01
     </div>
     <div class="card">
         <p-menubar [model]="items"></p-menubar>
