--- a/src/app/committees/hospitality/hospitality.component.html
+++ b/src/app/committees/hospitality/hospitality.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar-container">
     <div class="not-sidebar">
         <div class="section-header">Hospitality Committee</div>
-        <div class="paragraph-header">Leader: Theresa Cutright</div>
+        <div class="paragraph-header">Leader: Vacant</div>
         <p-divider></p-divider>
         <div class="paragraph-copy">
             The Hospitality Committee is tasked with welcoming new residents to the community and...
