--- a/src/app/forum/forum-menu/forum-menu.component.html
+++ b/src/app/forum/forum-menu/forum-menu.component.html
@@ -1,1 +1,4 @@
-
+<div class="menu-item">
+    <p-button label="{{data.title}}" styleClass="p-button-rounded" (onClick)="handleClick(data.id)"></p-button><br>
+    <span class="menu-sub">{{data.subTitle}}</span>
+</div>
