--- a/src/app/forum/forum-topic/forum-topic.component.html
+++ b/src/app/forum/forum-topic/forum-topic.component.html
@@ -1,3 +1,11 @@
-<div class="topic-header">
-    
+<div class="topic-item">
+  <div class="topic-header">
+    {{ data.title }}
+  </div>
+
+  <div class="topic-row">
+    <span class="topic-body">{{ data.likes }}</span>
+    <span class="topic-body">{{ data.dislikes }}</span>
+    <span class="topic-body">{{ data.body }}</span>
+  </div>
 </div>
