--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -2,8 +2,8 @@
   <h2>{{ pageTitle }}</h2>
   <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <span class="black12">Username</span>
-      <input type="text" pInputText formControlName="username" />
+      <span class="black12">Email</span>
+      <input type="text" pInputText formControlName="email" />
     </div>
     <div class="form-group">
       <span class="black12">Password</span>
