--- a/src/app/forum/forum-menu/forum-menu.component.html
+++ b/src/app/forum/forum-menu/forum-menu.component.html
@@ -1,4 +1,4 @@
 <div class="menu-item">
-    <p-button label="{{data.title}}" styleClass="p-button-rounded" (onClick)="handleClick(data.id)"></p-button><br>
+    <button type="button" pButton style="width:200px" label="{{data.title}}" (click)="handleClick(data.id)"></button><br>
     <span class="menu-sub">{{data.subTitle}}</span>
 </div>
