--- a/src/app/home/panel-middle/panel-middle.component.html
+++ b/src/app/home/panel-middle/panel-middle.component.html
@@ -1,8 +1,14 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="paragraph-header">Mission Statement</div>
+    <div class="paragraph-header">About the WST Advocacy Group</div>
     <div class="paragraph-copy">
-      The primary mission of WSTAG is to represent and inform the the Members of the Association 
+      The Westbury Square Townhomes Advocacy Group exists to provide homeowners
+      with current, complete and accurate concerning the management, finances
+      and leadership of the HOA. The WST HOA Board of Directors works for, and
+      should be held accountable to the members of the Association (the
+      "Members"). The Westbury Square Townhomes Advocacy Group is dedicated to
+      providing WST homeowners with up-to-date and accurate information
+      concerning the HOA Board of Directors and other community events.
     </div>
     <p-divider></p-divider>
   </div>
