--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -1,14 +1,13 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="paragraph-header">Introduction</div>
+    <div class="paragraph-header">Become a Member!</div>
     <div class="paragraph-copy">
-      The Westbury Square Townhomes Advocacy Group exists to provide homeowners
-      with current, complete and accurate concerning the management, finances
-      and leadership of the HOA. The WST HOA Board of Directors works for, and
-      should be held accountable to the members of the Association (the
-      "Members"). The Westbury Square Townhomes Advocacy Group is dedicated to
-      providing WST homeowners with up-to-date and accurate information
-      concerning the HOA Board of Directors and other happening, events, and
+      All WST owners are welcome to join.  
+      <p-divider></p-divider>
+      <div class="paragraph-header">Become a Member!</div>
+    <div class="paragraph-copy">
+      All WST owners are welcome to join.  
+      <p-divider></p-divider>
     </div>
    
   </div>
