--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -6,13 +6,13 @@
   <div class="not-sidebar">
     <p-tabView>
       <p-tabPanel header="Account">
-       
+       <app-account></app-account>
       </p-tabPanel>
-      <p-tabPanel header="Unit">
-       
+      <p-tabPanel header="Residents">
+       <app-residents></app-residents>
       </p-tabPanel>
       <p-tabPanel header="Vehicles">
-        
+        <app-vehicles></app-vehicles>
       </p-tabPanel>
     </p-tabView>
   </div>
