--- a/src/app/users/vehicle-list/vehicle-list.component.html
+++ b/src/app/users/vehicle-list/vehicle-list.component.html
@@ -1,1 +1,14 @@
-<p>vehicle-list works!</p>
+<div class="small-black-14">
+    <span class="black-16-550">{{ data.space }}</span
+    ><br />
+    <span class="small-black-text">Name:</span> {{ data.name
+    }}<br />
+    <span class="small-black-text">License:</span> {{ data.tag
+    }}<br />
+    <span class="small-black-text">Make:</span> {{ data.make
+    }}<br />
+    <span class="small-black-text">Model:</span> {{ data.model
+    }}<br />
+    <span class="small-black-text">Color:</span>
+    {{ data.color }}
+  </div>
