--- a/src/app/users/vehicles/vehicles.component.html
+++ b/src/app/users/vehicles/vehicles.component.html
@@ -1,19 +1,12 @@
 <div class="sidebar-container">
     <div class="not-sidebar">
       <div class="section-header">Vehicles</div>
-      <div class="small-black-14">
-        <span>{{ this.myVehicles[0].space }}</span
-        ><br />
-        <span class="small-black-text">Name:</span> {{ this.myVehicles[0].name
-        }}<br />
-        <span class="small-black-text">License:</span> {{ this.myVehicles[0].tag
-        }}<br />
-        <span class="small-black-text">Make:</span> {{ this.myVehicles[0].make
-        }}<br />
-        <span class="small-black-text">Model:</span> {{ this.myVehicles[0].model
-        }}<br />
-        <span class="small-black-text">Color:</span>
-        {{ this.myVehicles[0].color }}
+      <div  class="dataList" *ngIf="myVehicles[0].id > 0">
+        <ul>
+          <li *ngFor="let x of myVehicles">
+            <app-vehicle-list [data]="x"></app-vehicle-list>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
