--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,8 +49,12 @@ body {
     display:flex;
     flex-direction: column;
     input{
-        margin-bottom: 10px;
+        margin-bottom: 6px;
     }
+    .p-field label {
+        font-size: 12px;
+        font-weight: bold;
+      }
 }
 .paragraph-header {
     display: block;
@@ -135,6 +139,17 @@ img{
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
+}
+
+.dataList{
+    
+    ul{
+        list-style-type:none;
+        padding:0;
+        li{
+            margin-bottom:15px;
+        }
+    }
 }
 
 .spacer-5 {
